[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Return interface IP addresses on Posix and windows systems"
documentation = "http://docs.maidsafe.net/get_if_addrs/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0/MaidSafe.net Commercial License 1.0"
name = "get_if_addrs"
readme = "README.md"
repository = "https://github.com/maidsafe/get_if_addrs"
version = "0.4.0"

[dependencies]
clippy = {version = "~0.0.45", optional = true}
libc = "0.2"
c_linked_list = "~1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"

