[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "get_if_addrs sys crate"
documentation = "https://docs.rs/get_if_addrs"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
links = "ifaddrs"
name = "get_if_addrs-sys"
repository = "https://github.com/maidsafe/get_if_addrs"
version = "0.1.0"

[lib]
name = "get_if_addrs"
path = "lib.rs"

[dependencies]
libc = "~0.2.28"

[build-dependencies]
gcc = "0.3"
