[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "get_if_addrs sys crate"
documentation = "https://docs.rs/get_if_addrs"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
links = "ifaddrs"
name = "get_if_addrs-sys"
repository = "https://github.com/maidsafe/get_if_addrs"
version = "0.1.1"

[lib]
path = "lib.rs"

[dependencies]
libc = "~0.2.28"

[build-dependencies]
gcc = "0.3"
